# packages/api/resources/translations/en.js
@@ -1,3 +1,4 @@
 module.exports = {
   test_error: 'This is our test error.',
+  username_password_wrong: 'Username or password does not match.',
 };
